--- a/CSS/style.css
+++ b/CSS/style.css
@@ -1,21 +1,54 @@
 body {
     font-family: Arial, sans-serif;
     background-color: #f4f4f4;
-    margin: 0;
-    padding: 0;
 }
 
 .form-container {
-    max-width: 180px;
+    max-width: 400px;
     margin: 20px auto;
-    background-color: #de9e80;
     padding: 20px;
-    border-radius: 8px;
+    background-color: #fff;
+    border-radius: 5px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
 }
 
+.user-form label {
+    display: block;
+    margin-bottom: 8px;
+}
+
+.user-form input {
+    width: 100%;
+    padding: 8px;
+    margin-bottom: 15px;
+    box-sizing: border-box;
+}
+
+.user-form p {
+    margin: 15px 0 0;
+}
+
+.user-form input[type="submit"] {
+    background-color: #007bff;
+    color: #fff;
+    padding: 10px;
+    border: none;
+    border-radius: 3px;
+    cursor: pointer;
+}
+
+.user-form input[type="submit"]:hover {
+    background-color: #0056b3;
+}
+
+.error {
+    color: #ff0000;
+    margin-bottom: 10px;
+}
+
+
 h2 {
-    text-align: center;
+    text-align: left;
     color: #333;
 }
 
@@ -24,9 +57,6 @@ form .user-form {
     flex-direction: column;
 }
 
-label {
-    margin-bottom: 8px;
-}
 
 input {
     padding: 8px;
@@ -70,3 +100,97 @@ th {
     background-color: #4caf50;
     color: #fff;
 }
+
+
+
+.pagination-link {
+    margin-right: 20px; /* Adjust the margin-right value as needed */
+}
+
+
+.books-container {
+    max-width: 800px;
+    margin: 20px auto;
+    background-color: #fff;
+    padding: 20px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+}
+
+
+ul {
+    list-style-type: none;
+    padding: 0;
+}
+
+li {
+    margin-bottom: 10px;
+}
+
+.pagination {
+    margin-top: 20px;
+}
+
+.pagination a {
+    display: inline-block;
+    padding: 8px 12px;
+    background-color: #4caf50;
+    color: #fff;
+    text-decoration: none;
+    border-radius: 4px;
+    margin-right: 5px;
+}
+
+.pagination a:hover {
+    background-color: #45a049;
+}
+
+form {
+    margin-top: 20px;
+}
+
+label {
+    display: block;
+    margin-bottom: 5px;
+}
+
+input, select, button {
+    margin-bottom: 10px;
+}
+
+button {
+    background-color: #4caf50;
+    color: #fff;
+    padding: 8px 12px;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+}
+
+button:hover {
+    background-color: #108b16;
+}
+
+
+.header {
+    background-color: #f0f0f0;
+    padding: 10px;
+    text-align: center;
+}
+
+.header h1 {
+    margin: 0;
+    font-size: 1.5em;
+    color: #333;
+}
+
+.header a {
+    color: #007bff;
+    text-decoration: none;
+    margin: 0 10px;
+}
+
+.header a:hover {
+    text-decoration: underline;
+}
+
+
