--- a/CSS/style.css
+++ b/CSS/style.css
@@ -193,4 +193,27 @@ button:hover {
     text-decoration: underline;
 }
 
-
+footer {
+    background-color: #166304; /* Dark background color */
+    color: #fff; /* Text color */
+    padding: 20px; /* Padding inside the footer */
+    text-align: center;
+  }
+  
+  .footer-column {
+    display: inline-block;
+    margin: 0 20px; /* Margin between columns */
+  }
+  
+  .footer-column p {
+    margin: 0; /* Remove default margin for paragraphs */
+  }
+  
+  .footer-column a {
+    color: #fff; /* Link color */
+    text-decoration: none; /* Remove underline from links */
+  }
+  
+  .footer-column a:hover {
+    text-decoration: underline; /* Underline on hover */
+  }
